@@ -109,7 +109,7 @@ class Bookmarks :
     def display(self):
         """
 
-        Redraw teh display
+        Redraw the display
         """
         self.redraw()
 
@@ -121,6 +121,11 @@ class Bookmarks :
             self.uistate.uimanager.remove_ui(self.active)
             self.uistate.uimanager.remove_action_group(self.action_group)
             self.active = DISABLED
+
+    def redraw_and_report_change(self):
+        """Create the pulldown menu and set bookmarks to changed"""
+        self.dbstate.db.report_bm_change()
+        self.redraw()
 
     def redraw(self):
         """Create the pulldown menu"""
@@ -166,7 +171,7 @@ class Bookmarks :
         """appends the person to the bottom of the bookmarks"""
         if person_handle not in self.bookmarks.get():
             self.bookmarks.append(person_handle)
-            self.redraw()
+            self.redraw_and_report_change()
 
     def remove_handles(self, handle_list):
         """
@@ -182,7 +187,7 @@ class Bookmarks :
                 self.bookmarks.remove(handle)
                 modified = True
         if modified:
-            self.redraw()
+            self.redraw_and_report_change()
 
     def draw_window(self):
         """Draws the bookmark dialog box"""
@@ -246,7 +251,7 @@ class Bookmarks :
         if self.response == gtk.RESPONSE_HELP:
             self.help_clicked()
         if self.modified:
-            self.redraw()
+            self.redraw_and_report_change()
         self.top.destroy()
 
     def delete_clicked(self, obj):
